SEP-1: Add heading to section discussion separate currency files

--- a/ecosystem/sep-0001.md
+++ b/ecosystem/sep-0001.md
@@ -151,6 +151,8 @@ Replace `$PUBLIC_KEY` with the account's public key, `$CODE` with your asset cod
 
 Note: `fixed_number`, `max_number`, and `is_unlimited` are mutually exclusive issuance policies. Include exactly one of those fields.
 
+#### Currency Documentation Files
+
 Alternately, `stellar.toml` can link out to a separate TOML file for each currency by specifying `toml="https://DOMAIN/.well-known/CURRENCY.toml"` as the currency's only field.
 
 ### Validator Information
